# autonomousService

./: .gitignore  README.md  json_ext.py
src/: goundingDinoTest.py  promot.txt
src/common_interface/: CMakeLists.txt  package.xml
src/common_interface/msg/: KeyCtrl.msg  RectDepth.msg  SerComStruct.msg
src/detect_vl/: package.xml  setup.cfg  setup.py
src/detect_vl/detect_vl/: run_detect.py  start_service.py
src/detect_vl/scripts/: ans2json.py  service_lm.py  service_vl.py
